<resources>
    <string name="abgel_38_1">You need to collect the five-color basement key to get access to the basement!</string>
    <string name="about_autor">Developer</string>
    <string name="about_game">About Game</string>
    <string name="action_settings">Settings</string>
    <string name="alert_cancel_content">Canceled</string>
    <string name="alert_cancel_title">Cancelled!</string>
    <string name="alert_confirm_positive">OK</string>
    <string name="alert_delete_content">Once deleted, won\'t be able to recover user data!</string>
    <string name="alert_delete_title">Are you sure?</string>
    <string name="alert_deleted_content">User data cleared!</string>
    <string name="alert_deleted_positive">OK</string>
    <string name="alert_deleted_title">Deleted!</string>
    <string name="alert_false">No!</string>
    <string name="alert_positive">Confirm!</string>
    <string name="angel_11_1">Hello! There is lawn here.</string>
    <string name="angel_11_2" translatable="true">Yes, this is a roof garden and balcony of the tower.</string>
    <string name="angel_11_3" translatable="true">On some floors, going over the balcony can save much energy to get up to a higher floor!</string>
    <string name="angel_11_4">Thanks!</string>
    <string name="angel_16_1">The pickax can break through walls on some floors.</string>
    <string name="angel_16_2">If you got stuck somewhere, have a try with the pickax!</string>
    <string name="angel_32_1">What a large red dragon on this floor! You cannot open the steel doors if the red dragon is not cleared!</string>
    <string name="angel_32_2">Try to touch the head of the red dragon to start battle!</string>
    <string name="angel_36_1">The monster on 35 floor has an ice plate that can extinguish the fire on the floor.</string>
    <string name="angel_3_1">These monsters on the floor have quite different attack and defense potentials.</string>
    <string name="angel_3_2">Their energy are also various. Try to level up and increase you defense to challenge enemies with high attack.</string>
    <string name="angel_9_1">The tower has checking point boss every 10 floors.</string>
    <string name="angel_9_2">On this floor the boss is in the top left room.</string>
    <string name="angel_diag">Angel: </string>
    <string name="angel_floor0_content1">&#128077;&#128077;Brave warrior, welcome to the Tower of Evils game.</string>
    <string name="angel_floor0_content2">The tower is the home of evils where the princess of your country has been prisoned in.</string>
    <string name="angel_floor0_content3">Now the tower is right behind us. Enter the tower to start the game.</string>
    <string name="angel_floor0_content4">In the game, you should remove the enemies strategically and defeat the final boss to rescue hostage.</string>
    <string name="app_name">Tower of Evils</string>
    <string name="app_title_input_author">New User</string>
    <string name="apptitle_about_game">About Game</string>
    <string name="attack_increase_10per">Attack points increased 10%!</string>
    <string name="attack_text">Attack</string>
    <string name="author_email" translatable="false">minxpan@gmail.com</string>
    <string name="b_basement_key" translatable="false">blue_basement_key</string>
    <string name="b_diamond" translatable="false">blue-diamond</string>
    <string name="b_energy" translatable="false">blue_energy_plus</string>
    <string name="b_key" translatable="false">blue-keys</string>
    <string name="b_key_box" translatable="false">blue_key_box</string>
    <string name="blank" translatable="false"/>
    <string name="bless_100_energy">You got 100 points of energy!</string>
    <string name="bless_20_coins">You got 20 coins!</string>
    <string name="bless_3_attack">You got 3 points of attack!</string>
    <string name="bless_3_defense">You got 3 points of defense!</string>
    <string name="blessing_gift" translatable="false">new-year-blessing</string>
    <string name="blessing_title">A small gift</string>
    <string name="blood_sucking">(Blood Sucking!)</string>
    <string name="blue_defense_pot" translatable="false">blue-defense-pot</string>
    <string name="blue_diamond_content1">Blue diamond can increase your defense 3 points for each one. You have equipped</string>
    <string name="blue_diamond_content2">blue diamonds.</string>
    <string name="blue_key_content1">Blue keys can open blue doors. You have</string>
    <string name="blue_key_content2">blue keys.</string>
    <string name="blue_wizard_floor0_content">Hello! If you can defeat me, I can let you visit the tower basement behind me.</string>
    <string name="bonus_invitation">, here is 50 game coin bonus for you! Click to start the game.</string>
    <string name="book_of_exp" translatable="false">Book of experience</string>
    <string name="book_of_wisdom" translatable="false">book-of-wisdom</string>
    <string name="book_of_wisdom_content2">book of wisdom.</string>
    <string name="boss_diag">BOSS: </string>
    <string name="buy_r_key_4000">Do you want to buy 1 red key with 4000 coins?</string>
    <string name="cannot_beat">You cannot win this enemy!</string>
    <string name="cannot_defeat">You cannot defeat this enemy!</string>
    <string name="cannot_open">You cannot open this gate.</string>
    <string name="chaos_sword" translatable="false">chaos-sword</string>
    <string name="chinese_simplified_label">Chinese(Simplified)</string>
    <string name="chinese_traditional_label">Chinese(Traditional)</string>
    <string name="clear_4_greenwidzard">Clear the four green wizards!</string>
    <string name="clear_5_wizards">Clear the five wizards!</string>
    <string name="clear_all_enemies">Clear all the enemies on this floor!</string>
    <string name="clear_dragon_n_safe">Defeat the red dragon and the three safeguards!</string>
    <string name="clear_red_dragon">Defeat the red dragon first!</string>
    <string name="clear_safeguards">Clear the safeguards of this door!</string>
    <string name="clear_safeguards_floor">Clear all the safeguards on this floor!</string>
    <string name="coins" translatable="false">coins</string>
    <string name="coins_content">Coins can be used to trade Energy, Attack, Defense in the store. You have coins :</string>
    <string name="coins_text">Coins</string>
    <string name="congratulations">Congratulations!</string>
    <string name="contact_author">Contact Author</string>
    <string name="cross" translatable="false">cross</string>
    <string name="crown_image" translatable="false">Crown Image</string>
    <string name="cyan_attack_pot" translatable="false">cyan-attack-pot</string>
    <string name="daily_bonus_reminding">Tap here to accept daily bonus of 50 coins!</string>
    <string name="defeat_3_gw">Defeat the three green wizards!</string>
    <string name="defeat_4_pinkbats">Clear the four pink bats on the balcony!</string>
    <string name="defeat_4_skeleton">Defeat four vampire skeleton!</string>
    <string name="defeat_below_safe">Defeat the four safe guards below!</string>
    <string name="defeat_five_knights">Defeat all the five knights in this room!</string>
    <string name="defeat_the_bosses">Defeat all the boss on the floor!</string>
    <string name="defeat_the_guards">Defeat the safeguards!</string>
    <string name="defense_increase_10per">Defense points increased 10%!</string>
    <string name="defense_text">Defense</string>
    <string name="details">Details</string>
    <string name="detonator" translatable="false">detonator</string>
    <string name="diag_level_5">You are leveled up 5 grades!</string>
    <string name="diag_level_7">You are leveled up 7 grades!</string>
    <string name="diag_level_up_1">Congratulations! You are leveled up 1 grade!</string>
    <string name="dialog_10_levels">You are level up 10 grades!</string>
    <string name="dialog_insufficient_experience_380">You don\'t have 380 or more experiences!</string>
    <string name="dialog_insufficient_experience_500">You don\'t have 500 or more experiences!</string>
    <string name="dialog_insufficient_experience_700">You don\'t have 700 or more experiences!</string>
    <string name="diamond_shield" translatable="false">diamond-shield</string>
    <string name="difficulty">Difficulty:</string>
    <string name="difficulty_in_list">Medium</string>
    <string name="difficulty_info">3 levels</string>
    <string name="disabled_snapshot">Widgets disabled</string>
    <string name="divine_shield" translatable="false">divine-shield</string>
    <string name="downstairs_wing" translatable="false">down_fly_wing</string>
    <string name="dummy" translatable="false"><![CDATA[<N.A.>]]></string>
    <string name="ea_32_1">Ahh, I was defeated…</string>
    <string name="ea_37_1">The master of this tower has taken the princess to the basement.</string>
    <string name="ea_37_2">The master is quite powerful, and you will be prisoned and killed.</string>
    <string name="ea_37_3">Now get away from this tower…</string>
    <string name="ea_37_4">Until I save the princess!</string>
    <string name="ea_37_5">It is up to you. I hope you can defeat him, or the princess will be come his new wife!</string>
    <string name="ea_37_6">Oh, that\'s why you dressed like the princess.</string>
    <string name="eb_29_1">Where did you take the princess to?</string>
    <string name="enable_snapshot">Enable Widgets for Game Panel</string>
    <string name="enabled_snapshot">Widgets Enabled</string>
    <string name="error_empty">Empty user list. Input your name in the game to create one.</string>
    <string name="game_interface">Game Interface</string>
    <string name="game_profile">Game Profiles</string>
    <string name="get_3_points_attack">Get 3 points attack</string>
    <string name="get_3_points_defense">Get 3 points defense</string>
    <string name="get_50_points_experience">Get 50 points experience</string>
    <string name="get_energy_800">Get 800 points energy</string>
    <string name="level_is">LEVEL: </string>
    <string name="lose_instruction">Click to quit the battle and continue game, you will lose 10% of coin and energy.</string>
    <string name="pref_bonus_coin_key" translatable="false">pref_key_coin</string>
    <string name="pref_fps_default" translatable="false">15</string>
    <string name="pref_fps_key">fps_pref_key</string>
    <string name="pref_fps_label">Frame per Seconds</string>
    <string name="pref_game_panel_default" translatable="false">landscape</string>
    <string name="pref_game_panel_key" translatable="false">preferred game view</string>
    <string name="pref_game_panel_label">Gravity Direction</string>
    <string name="pref_lan_english_value" translatable="false">en</string>
    <string name="pref_lan_key">preferred language</string>
    <string name="pref_language_label">Language Preference</string>
    <string name="pref_size_key">font-size</string>
    <string name="pref_size_label">Font Size</string>
    <string name="pref_small_size_value" translatable="false">small-sized</string>
    <string name="pref_snapshot_key">pref_widget_key</string>
    <string name="pref_user_bonus_key">pref_user_key</string>
    <string name="pref_user_icon_key">pref_user_icon_key</string>
    <string name="pref_user_icon_summary">Set an icon to your game profile.</string>
    <string name="quit_and_continue"><![CDATA[Quit battle>>>]]></string>
    <string name="receive_coin_prompt">Subscript the Bonus</string>
    <string name="refuse_coin_prompt">Cancel Bonus Notification</string>
    <string name="resume">Resume</string>
    <string name="small_store_dialogue">Hello！ Which do you want to do with 50 coins?</string>
    <string name="tap_to_skip"><![CDATA[Tap to skip >>>]]></string>
    <string name="user">User</string>
    <string name="user_portrait_icon" translatable="false">User Portrait Icon</string>
    <string name="choose_a_difficulty">Choose a difficulty:</string>
</resources>