<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/userlist_background"
    android:layout_marginStart="3dp"
    android:layout_marginTop="15dp"
    android:paddingBottom="15dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="15dp">

    <!--This View serves as a visual divider between list items-->

    <TextView
        android:id="@+id/difficulty_in_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:text="@string/difficulty_in_list"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/game_list_resume_button"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:background="@drawable/button_image"
        android:text="@string/resume"
        android:typeface="monospace"
        android:fontFamily="sans-serif"
        style="@style/Widget.AppCompat.PopupWindow"
        android:textStyle="normal|bold"
        android:transitionName="resume-button-transition"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline12" />

    <ImageView
        android:id="@+id/user_list_crown"
        android:layout_width="@dimen/standard_60"
        android:layout_height="@dimen/standard_60"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/crowns"
        android:contentDescription="@string/crown_image" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="84dp"
        android:background="@drawable/close"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/game_list_resume_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <Button
        android:id="@+id/button_details"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:background="@drawable/button_image"
        android:text="@string/details"
        android:typeface="monospace"
        android:textStyle="normal|bold"
        style="@style/Widget.AppCompat.PopupWindow"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/game_list_user_icon"
        android:layout_width="70dp"
        android:transitionName="user-icon-transition"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/warrior"
        android:contentDescription="@string/user_portrait_icon" />

    <TextView
        android:id="@+id/level_in_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/level_is"
        app:layout_constraintStart_toEndOf="@+id/game_list_user_icon"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <HorizontalScrollView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/game_list_user_icon">
        <TextView
            android:id="@+id/user_name_in_list"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/user" />
    </HorizontalScrollView>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="3dp"-->
<!--        android:background="?android:attr/listDivider"-->
<!--        android:paddingTop="3dp"-->
<!--        android:paddingBottom="3dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>

