<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_frame"
    android:layout_margin="5dp"
    android:padding="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/store_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|bottom"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center|bottom"
            android:text="@string/small_store_dialogue"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHighlight="@android:color/holo_red_light"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/trade_energy"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/settings"
            android:gravity="center"
            android:text="@string/get_energy_800"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/trade_experience"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/settings"
            android:text="@string/get_50_points_experience"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/trade_attack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/settings"
            android:text="@string/get_3_points_attack"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/trade_defense"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="0.2"
            android:background="@drawable/settings"
            android:text="@string/get_3_points_defense"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/store_close_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center|end"
        android:background="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>